feat : httpRequest (string->object)

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ cookhub-server/gradlew
 cookhub-server/gradlew.bat
 cookhub-server/settings.gradle
 cookhub-server/src/test/*
+.DS_Store
+**/.DS_Store
