--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,4 @@
-# cookhub-server
-cookhub-server/.gradle/*
-cookhub-server/.idea/*
-cookhub-server/build/*
-cookhub-server/gradle/*
-cookhub-server/gradlew
-cookhub-server/gradlew.bat
-cookhub-server/settings.gradle
-cookhub-server/src/test/*
-.DS_Store
-**/.DS_Store
+# intellij idea
+.idea/*
+out/*
+*.iml
